--- a/src/containers/workExperience/WorkExperience.scss
+++ b/src/containers/workExperience/WorkExperience.scss
@@ -55,3 +55,17 @@
     text-align: center;
   }
 }
+
+.footer-link-button {
+  display: inline-block;
+  padding: 0.5em 1.5em;
+  text-decoration: none;
+  background: #668ad8; /* fallback color */
+  color: #FFF;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+
+.footer-link-button:hover {
+  background: #5372a1;
+}
